@@ -1,11 +1,10 @@
 package br.com.devsource.gs1;
 
 import java.util.Collection;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Iterator;
 import java.util.Map;
 import java.util.Optional;
+import java.util.WeakHashMap;
 import java.util.function.Function;
 
 import org.apache.commons.lang3.StringUtils;
@@ -25,16 +24,16 @@ public final class Gs1128Decoder {
   public Map<AI, String> decode(final String barcode) {
     validateBarcode(barcode);
     String barcodeValue = StringUtils.remove(barcode, Gs1128Utils.PREFIX);
-    Iterator<Character> iterator = Gs1128Utils.iterator(barcodeValue);
-    return extract(iterator);
+    return extract(barcodeValue);
   }
 
-  private Map<AI, String> extract(Iterator<Character> iterator) {
-    Map<AI, String> result = new HashMap<>(4);
+  private Map<AI, String> extract(String barcode) {
+    final Iterator<Character> iterator = Gs1128Utils.iterator(barcode);
+    final Map<AI, String> result = new WeakHashMap<>(4);
     StringBuilder builder = new StringBuilder();
     while (iterator.hasNext()) {
       builder.append(iterator.next());
-      Optional<Map<AI, String>> mapAi = mapAi(iterator, builder);
+      Optional<Map<AI, String>> mapAi = mapAi(iterator, builder.toString());
       if (mapAi.isPresent()) {
         result.putAll(mapAi.get());
         builder = new StringBuilder();
@@ -43,22 +42,20 @@ public final class Gs1128Decoder {
     return result;
   }
 
-  private Optional<Map<AI, String>> mapAi(Iterator<Character> iterator, StringBuilder builder) {
-    Optional<AI> ai = ais.stream().filter(v -> v.getCode().equals(builder.toString())).findFirst();
-    return ai.map(aiValue(iterator));
+  private Optional<Map<AI, String>> mapAi(Iterator<Character> iterator, String builder) {
+    return ais.stream().filter(v -> v.getCode().equals(builder)).findFirst().map(aiValue(iterator));
   }
 
   private Function<AI, Map<AI, String>> aiValue(Iterator<Character> iterator) {
     return ai -> {
       String value = Gs1128Utils.value(ai, iterator);
-      return Collections.singletonMap(ai, value);
+      return Map.of(ai, value);
     };
   }
 
-  private void validateBarcode(String codigo) {
-    Validate.notBlank(codigo, "Código de barra é inválido");
-    Validate.isTrue(StringUtils.startsWithIgnoreCase(codigo, Gs1128Utils.PREFIX),
-      "Código de barra inválido");
+  private void validateBarcode(String barcode) {
+    Validate.notBlank(barcode, "Barcode cannot be blank");
+    Validate.isTrue(StringUtils.startsWith(barcode, Gs1128Utils.PREFIX), "Barcode must start with prefix Gs1-128 \"]C1\"");
   }
 
 }
